--- a/_sass/minima/_custom.scss
+++ b/_sass/minima/_custom.scss
@@ -95,10 +95,10 @@ h3, h4, h5 {
 }
 
 .grid {
-  -webkit-box-flex: 1;
+/*  -webkit-box-flex: 1;
   -webkit-box-flex: 1;
   -ms-flex: 1 0 auto;
-  flex: 1 0 auto;
+  flex: 1 0 auto; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
