--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
+    <link rel="icon"
+      type="image/png"
+      href="{{ "/assets/img/1526316349.ico" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/animate.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   {%- feed_meta -%}
