--- a/_includes/home-columns.html
+++ b/_includes/home-columns.html
@@ -12,7 +12,7 @@
 </div>
 <div class="section grid">
   <div class="col-text">
-    <h2>We know crytpo</h2>
+    <h2>We know crypto</h2>
     <p>We help upcoming ICOs and established blockchain technologies stand out and become more visible to potential users. We simplify messages so that your tech can be understood by a wider audience and then we spread that message everywhere – Twitter feeds, YouTube videos, Telegram channels, and subreddits. As we increase the community, we increase your brand value.</p>
   </div>
   <div class="card home-card">
