--- a/_includes/services.html
+++ b/_includes/services.html
@@ -28,7 +28,7 @@
           <i class="far fa-newspaper fa-2x"></i>
         </div>
           <h3>Public Relations</h3>
-          <p>Get the word out through the crypto-industry's most trust news sources and editorials.</p>
+          <p>Get the word out through the crypto-industry's most trusted news sources and editorials.</p>
       </div>
     </div>
   </br>
